# ChangeLog for kde-base/akonadi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/akonadi/ChangeLog,v 1.101 2014/05/13 22:37:50 johu Exp $

*akonadi-4.4.11.1-r1 (13 May 2014)

  13 May 2014; Johannes Huber <johu@gentoo.org> +akonadi-4.4.11.1-r1.ebuild:
  Revision bump adapts USE flag changes made in KDE SC 4.13.1, bug #508350.

  21 Apr 2014; Johannes Huber <johu@gentoo.org> akonadi-4.4.11.1.ebuild:
  Add use dep on app-office/akonadi-server[soprano].

  05 Apr 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  akonadi-4.4.11.1.ebuild:
  EAPI bump, clean up blockers

*akonadi-4.4.11.1 (10 Oct 2013)

  10 Oct 2013; Chris Reffett <creffett@gentoo.org> +akonadi-4.4.11.1.ebuild:
  Actually add 4.4.11.1 this time.

  10 Oct 2013; Chris Reffett <creffett@gentoo.org> -akonadi-4.4.11.1.ebuild:
  Drop KDE SC 4.11.1

  31 Jul 2013; Johannes Huber <johu@gentoo.org> akonadi-4.4.11.1.ebuild:
  Update HOMEPAGE wrt bug #478884.

  31 May 2013; Michael Palimaka <kensington@gentoo.org> akonadi-4.4.11.1.ebuild:
  Add USE dependency default in preparation for the removal of the semantic-
  desktop USE flag.

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> akonadi-4.4.11.1.ebuild:
  Add ~ppc64, wrt bug #455960

  08 Dec 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  akonadi-4.4.11.1.ebuild:
  Drop ppc64 as in rest of KDE

  26 Jul 2012; Johannes Huber <johu@gentoo.org> akonadi-4.4.11.1.ebuild:
  Block kde-base/akonadiconsole to prevent file collisions, bug #428182.

  02 Jun 2011; Andreas K. Huettel <dilfridge@gentoo.org> -akonadi-4.4.9.ebuild,
  -akonadi-4.4.10.ebuild:
  Drop kdepim 4.4.9 and 4.4.10

  01 Jun 2011; Brent Baude <ranger@gentoo.org> akonadi-4.4.11.1.ebuild:
  Marking akonadi-4.4.11.1 ppc stable for bug 354033

  09 May 2011; Markos Chandras <hwoarang@gentoo.org> akonadi-4.4.11.1.ebuild:
  Stable on amd64 wrt bug #354033

  09 May 2011; Thomas Kahle <tomka@gentoo.org> akonadi-4.4.11.1.ebuild: