@@ -2,24 +2,16 @@
 Hash: SHA256
 
 DIST kdepim-4.4.11.1.tar.bz2 8964708 SHA256 a2fa237a3d880cc55a6c94450b93a7918bb0d5e3943eb7a759c8789de1ed41bf SHA512 7450ba9985c5583847d1fc3d214940cef130150a3591c3cbb73bc15624ee0298805d5dc25f3cd3a135091c1d0491b865961d52aa8feef623219eed9364dd86bf WHIRLPOOL 349a72c5c6859c7cafb1aefdf80b80482102c8b1d6e0123c6c410d262c3908b9572daa1950e2fb41e6bc727430fc91bb57b7276e345553ed15d792fa63aba5ec
-EBUILD akonadi-4.4.11.1-r1.ebuild 1027 SHA256 e9754075c66807ba9d1a585aa2a01ee24e52895cb140e2d0f5832ffe3bba8287 SHA512 2abc706c7d2d5a55b5f1ee123f6f434222085d22649e3de4285a847b1b5fd2336699042471cd72108636873aba5f7eb3fb33f587ddda01801b6c6ef6b399693b WHIRLPOOL 6d46ddca4c6ab088e05813ed710f1342e3de26b53e885aa3872b320eeb72b91d29d3d9c357e4341f09ce5886a12b29ce18abb191b1d9abd974847dd499cb409a
+EBUILD akonadi-4.4.11.1-r1.ebuild 1029 SHA256 dfe609862f48b75f99a6a53c357abf81723d2ef6bd61abccda69ea4bcdc07b00 SHA512 c7f1626cdb4fb19e9306be125479e38a342e54fb0909682dc2e938667e28d22a51adc278ec999745827ca8e3b35197e312193c8b60f8c8be3d9f05bd7746251c WHIRLPOOL dc4578864d049e53ba4e6df18d4787e9644cb76eed2b46acb58f7875d1f709c718252f7f20cdc0e00ee2231f60f23061c98e977aac3463c34bd50129925670bd
 EBUILD akonadi-4.4.11.1.ebuild 1047 SHA256 28a2a62f8f817a34b9e2df0dab5abaf54827578fff30b8891b34eb745e4aa84f SHA512 31733fbe5e72646545dd20a7b4914a2ff8a544e72a3f4bcb79a79b66f9b2a2bbec60d6343c5ae468ae412e706f7aefbc06da56187d30204e1d1b88ea5b4aa596 WHIRLPOOL e9664e2b0b4b6ec6298df926329c60b62a9b7468c7afdaf680797f4fe08d2cee423484c8e8f29729c0c94ebb8c747113c685eeadae8889a2e2516fd718c4a7e6
-MISC ChangeLog 12683 SHA256 32e95358338f982797c17a63f23643469a1ca0339352c3bc89580d3a73f456d9 SHA512 22fb5d8f346bac5f338fc027f6afe7ec488e500684a37aba05b701e7f637446e8db17d4c1de2a56dd6efdb76b5513306bcee59cd17ee69a0c234dab1bf82ecad WHIRLPOOL 97571c8db1f03a839ec8f7104fa4a2b2cb5e243efc29ec8339b6921ee40ea935e91f56a881845f77f0d75eb3e6eb4afe4347a02bb560b83605c68e86e637706a
+MISC ChangeLog 12796 SHA256 a7e66b13c234ae4b395247fd5ccfa8302b38a5da7c034cb96865324484dec485 SHA512 338024b3322712043d8a5d8a9466f90632930f26f8522bd9b196c745f6739057fa8a4cca29608794d258d55cf6e4f65bbd92d960e59ee7d40e4dcdc8e5c8bc6a WHIRLPOOL 27f5b95f34420708bee6b2bf514fb4abd3fd8ad33f30632212d32b4d2dcc50303e1ef353dc0b42bbb6c9cf5930cbd70c47d27821e48b0d80758ad2f2c6592a70
 MISC metadata.xml 264 SHA256 32efc15c63fd9700059a66f445311cb07b7f1bd882c5d9e81f9a8861d6445f54 SHA512 977e88d3d19c3e2bcf0ab8918acda9f0b413042a6f97d9dc9cc0a3033d41402f50964b6b1ece53997d7d6976c26c9afb582f5ea1e3d48fff0ebe6a9d8fd392e8 WHIRLPOOL 881e6c1a5cca813b154e3efb65e3bbca2977b663fddcef40ac323da86aad381fa3cc712c5645fbff2a946bb3d235673e5929fce64dec20e996660d38561def80
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTcp7AAAoJEGVpnaTzz9K9YbUQAMT8Z5J5BAsBvldDCmqIDDy/
-JutHwcEw63836nFLoDQmM3HHdGGmH1zJp6otP3X0F/3JUZiz/UPEkpc/jn57Ormo
-hqgBnFCaSo0ksWquTTc1l2A69evTh2SB0S3QpJsBdTonuBxWN/rVEUMnjuUCFujs
-L4PBHPiNPjlFREcZpMI19i3bj0MGIezoLv9+rU2Cnj5+YCbG2GnrvIiJbAZQTnj9
-Ia4cScKcqyDl23qaCL8qQ8Cb1YDLysO4d+2RUbfGy7la4JxC0LvPoJZsq0Uq3TlM
-GHu5KWVMU0RuO4gQ8Jr0n3Q4Dx1+1kDlIhD7yEt4gV1X5FMZNeUelcLejqDUuERg
-X/gegjImPwSH7odhK3203hPTUObniJpiLqk+KO5/4peBenWVILRkzEbWtKMj+ZsN
-rk8C8AqP78QXHn7G4o2N8yW2dqG6oGd4G6fGm33LtHHqQ57obhI/i/Z12BCvrx4x
-VfI3C+83oZaGoplLzNKpTMN+GyqB5BOIfQT9XGunbP4Eo8MQD4vgs3DtGHoIuPw1
-7sOOAdroMCxvnPwdroZZ5hyuq19wPMj1YK2ZYLpfBCNEM1cbFBUbtwOQLuQs00jM
-NnrGGG5sCP1QuxEWFkqTRo4mb4cj520ABIbN3S1kaxj24X+Xdbg1dzHiKlRwTC3I
-skgygU6UQ8CL4CNz6Me5
-=UH5X
+iJwEAQEIAAYFAlSLCcQACgkQG9wOWsQutdYDtwQAts0HcyH68+8X9O8Pz85hISDB
+AyYg3q8CxLxUhvm9EOHcDS1z/7AIn/hh9vfkTU9TIWGQhGnp/xEr7pdhp7rkNY5K
+eW9Cd9mUuIAD5YXo6ZlU/QtpFY1J+vJ7IoleaPnXizlE0MAAa12eJ392wqkEJUKU
+sjIYEfL97WaLtd0zvoU=
+=kLGy
 -----END PGP SIGNATURE-----
