@@ -6,14 +6,16 @@ AUX amarok-2.8.0-mysqld-rpath.patch 602 SHA256 b8a10620877962ecd4fd4b3f466bb2418
 DIST amarok-2.8.0.tar.bz2 39950028 SHA256 f4b89b28f217a6d947e55fb0890de22fad8c404794c6beeb2dcaf2711b4f8ec6 SHA512 09f7f675f1223d36fb9df2f8c88923c6616524e022ad83b12bcb770dfbf60cb6b191e4035633f2ea2eee5fb7b38e6d5092cf69fe222ef9c3f3c46ba8f157a62d WHIRLPOOL 108cfd95d65e74f28f85a846f605bc349e5b2962b7f9a357415225f3e48ff87148d7f50a642665cc3c809bb2cb4c22f339ad049cdeb4659bb7c0a48e798833ad
 EBUILD amarok-2.8.0-r1.ebuild 3778 SHA256 0e79975ed5ad8bb310bca486ded5655907cdc77db92101fc2161bcb836cfe147 SHA512 c032820d7be8fbce87298717ba8a0bc388863af08deeb322b262c5c56087c2f79517166a466c6b7f910b1261ce91e9840cbe27e155a7a4da7fb173326e34bee1 WHIRLPOOL aa2c227af9bb4262179fbdf6444887f0d27846f7b535a5af8dd6833f6912e8574c8111a834780ff7a2b8e0e14f892fb438c30d580656f0d16fe134407762fe11
 EBUILD amarok-2.8.0-r2.ebuild 3576 SHA256 2b1570bde2b3cc227737e2d1c194a90475e8764c5c5de0bf6c1ba467e44953b6 SHA512 e1bbbbf8f622e0e255173bcd07e47dc28cc5c2a9ca34f66e6b3f6d2fcbaf81f7e3cf44ad55527c85670168e871e50f3c41162c865eb51ad177052374938a0f13 WHIRLPOOL 8be04dc12737274e99bf6abf6d32a5e67ad57a25a2c7e4f159e0aa963ac3ffb92f5c5a4fe6e41bd44f1b828b387fd1c380ea3bf618631dd62749b96a84e6484c
-EBUILD amarok-2.8.0-r3.ebuild 3753 SHA256 d86a48fc4ce4fb6a5a8cbbe066f886ba871a098fec0050a244b2e6a466de68e9 SHA512 efe419cc639fa7c2c3e80c2e8013879d13a048564d0077bc29ef22c703214b3685be29f4f0ea8bef309626273932817005a82c5ba4ab1bb684d4c6573e800585 WHIRLPOOL 3a3e23ec2ce4077360ec4c7c7c1f5d1e7ee3600f77392a20bb12f78e193a0029ac5e1bf1b51819b90c2996beb97b4580afdb2a62065a45ba186f37bef8ea9182
+EBUILD amarok-2.8.0-r3.ebuild 3753 SHA256 e841d96e16577457eea5a6a15b7ac89a1499f9cf30b8af7f490450b1f036c66e SHA512 bd04e9dcf9c9d5a617566b7b18378158336a4b8073d3aa13452394aff98ac994247a7a78bd388234cc6ddfbf56c758ea308572e490c0268ba69ddc2a6576300e WHIRLPOOL 64d791019cae471278d2b171d9db94d6434f43210097975f39f8136af9fdb5f0cfd8e4b90ad4ec74bf26d86071910975791eb9d39110baa6ef57ebc9662f8284
 EBUILD amarok-2.8.0.ebuild 3586 SHA256 46501342da286ecdaf1f01397319d7b55d4e5cde599d939e42f64fbb72041377 SHA512 85aae1d88dd54190205c6ce47f96cfbedc9b5b5e7fc1f11582cd5997029952157a60965d4425d129e22fcffde0cd6cc6256d75eb5aeb13e20d5dc20b1fd0edfc WHIRLPOOL 7e5675648b6150d19312c3f1cd5ac4b0e9e38528548acf03a2b185e96c807098f0bb0d4ebf49d8e1a211be0c153ee61ab0623c82c5bbadc2e95cc2e8fb2c4be2
-MISC ChangeLog 80429 SHA256 b87d827da606d96361413d312258c0f08c41005a949382e927926cb5cbf337e2 SHA512 812a316491bdba81f2b618f0d2c02efd546f30748fe04943d457a06efde8d90a0883e25a651c0f655e4cab49851fe6332335de4778a7165723fd7f2dbce9cff7 WHIRLPOOL 0fd3fdbe7e18146f1a2a8b9428d9b0f7f46e25f89a4c90f69c4d9ab29bc387a89d4edf7d8fc0640e7c01a5a82d1399f611426185dbf6f67f4cdf86fe86b32e21
+MISC ChangeLog 80536 SHA256 bdb39afd0e2b632b2591c157a1621cce84bd1d2657c51237866399de299ea231 SHA512 fa83fcbfa12e78acd1e6567c313de8f2e2112ab09be4a1e7ec9ee8505d16f73727a15eb45f0aa8cd8135cc9ba0a40f96d3b90859121ed551ba6278279a780c83 WHIRLPOOL e00d2562247967164807bc4d14dd47761041110f111fd5a0999c43183515ec2ede3bb00d57070acde5a0691e0ed40d478e4386c2498abfd44ef161f375dfe14f
 MISC metadata.xml 1064 SHA256 8e46a720b86b83508c2bf4a5a3be43bbdabb1bf8e057b547dc881912fea035e6 SHA512 d576c1e66b3e76e899f4580a908d41a0ad2faaae0346b47fe5e4d925763428e705be2fe7246f4109a4b470c6a75acd445215722fc3b3e82709af765d659e7705 WHIRLPOOL 9b1235b62922630dbb2968c62dda7cac97eddc48a4857232d6a0aa25abdb756dad474281d39f2e342e719adb9f6311a6004e3b629496975e8b82f68d4487f96e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn3igACgkQcaHudmEf86paawCeMu6UdEvJ+LiW1GMRm4gXmJDG
-wiAAn3L7grV6Q2cP28TGI0AvqMeJgc+f
-=v2OT
+iJwEAQEIAAYFAlSLCYIACgkQG9wOWsQutdZTkwQAwHTJ6E8uL0TYp10g27Hr1VEE
+h18bjeE6wlMPGjcx0IwPC6t5TO5w227vwvZLTQFMpUu+Fi8r5YNd1telseH2RMbZ
+dFalY0o0pxZoHcxnwhU4XqLHacs/8HqSCbOCUd6VzaVt6Nz1gR5+mc9nqRdGiaEK
++p3XFJfx7C/RRGT+JRI=
+=B6rv
 -----END PGP SIGNATURE-----
