@@ -4,10 +4,10 @@ DESCRIPTION=An extensible cross-desktop storage service for PIM data and meta da
 EAPI=5
 HOMEPAGE=http://pim.kde.org/akonadi
 IUSE=debug aqua
-KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux
+KEYWORDS=amd64 ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=>=app-office/akonadi-server-1.3.1[soprano(+)] >=kde-base/kdelibs-4.13.1:4[aqua=,nepomuk] >=kde-base/kdepimlibs-4.13.1:4[aqua=] >=kde-base/libkdepim-4.4.11.1:4[aqua=] !kde-base/akonadiconsole >=kde-base/kdepim-runtime-4.4.11.1:4[aqua=] || ( kde-apps/oxygen-icons >=kde-base/oxygen-icons-4.4.11.1:4[aqua=] ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4.11.1:4[aqua=]
 SLOT=4/4.4
 SRC_URI=mirror://kde/stable/kdepim-4.4.11.1/src/kdepim-4.4.11.1.tar.bz2
 _eclasses_=cmake-utils	e2cc76ea65ae78da8e4696dad93f5d29	eutils	6faef4c127028ccbba3a11400d24ae34	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-base	09b7a4b67499b194d4196dc79ba2e599	kde4-functions	492237eb2823bdc02bc769530501f0ea	kde4-meta	43baa369240a27d6bc794953b4b07f66	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=2073787c89477431945677bd1036a9aa
+_md5_=45176298cabc1c132c20bd1898801d64
