@@ -4,10 +4,10 @@ DESCRIPTION=Advanced audio player based on KDE framework
 EAPI=5
 HOMEPAGE=http://amarok.kde.org/
 IUSE=cdda debug +embedded ipod lastfm mp3tunes mtp nepomuk ofa opengl test +utils linguas_bs linguas_ca linguas_ca@valencia linguas_cs linguas_da linguas_de linguas_el linguas_en_GB linguas_es linguas_et linguas_eu linguas_fi linguas_fr linguas_ga linguas_gl linguas_hu linguas_it linguas_ja linguas_lt linguas_lv linguas_nb linguas_nl linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sl linguas_sr linguas_sr@ijekavian linguas_sr@ijekavianlatin linguas_sr@latin linguas_sv linguas_tr linguas_uk linguas_zh_CN linguas_zh_TW test +handbook aqua
-KEYWORDS=~amd64 ~ppc ~x86
+KEYWORDS=amd64 ~ppc ~x86
 LICENSE=GPL-2
 RDEPEND=app-crypt/qca:2 >=kde-base/kdelibs-4.8.4:4[aqua=,nepomuk?,opengl?] >=kde-base/kdebase-kioslaves-4.13.1:4[aqua=] >=media-libs/taglib-1.7[asf,mp4] >=media-libs/taglib-extras-1.0.1 sys-libs/zlib >=virtual/mysql-5.1[embedded?] >=dev-qt/qtcore-4.8:4 >=dev-qt/qtdbus-4.8:4 >=dev-qt/qtscript-4.8:4 >=x11-libs/qtscriptgenerator-0.1.0 cdda? ( >=kde-base/libkcddb-4.13.1:4[aqua=] >=kde-base/libkcompactdisc-4.13.1:4[aqua=] >=kde-base/audiocd-kio-4.13.1:4[aqua=] ) ipod? ( >=media-libs/libgpod-0.7.0[gtk] ) lastfm? ( >=media-libs/liblastfm-1.0.3 ) mp3tunes? ( dev-libs/glib:2 dev-libs/libxml2 dev-libs/openssl net-libs/loudmouth net-misc/curl >=dev-qt/qtcore-4.8.4:4[glib] ) mtp? ( >=media-libs/libmtp-1.0.0 ) nepomuk? ( >=kde-base/nepomuk-core-4.9.0 ) ofa? ( >=media-libs/libofa-0.9.0 ) opengl? ( virtual/opengl ) !media-sound/amarok-utils >=kde-base/phonon-kde-4.13.1:4[aqua=]
 SLOT=4
 SRC_URI=mirror://kde/stable/amarok/2.8.0/src/amarok-2.8.0.tar.bz2
 _eclasses_=cmake-utils	e2cc76ea65ae78da8e4696dad93f5d29	eutils	6faef4c127028ccbba3a11400d24ae34	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-base	09b7a4b67499b194d4196dc79ba2e599	kde4-functions	492237eb2823bdc02bc769530501f0ea	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=d0fef33f6e886d7a69c05584ad84ee3e
+_md5_=cf335385bff9e211bbf3f94b84984f78
