@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/akonadi
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/akonadi/ChangeLog,v 1.101 2014/05/13 22:37:50 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/akonadi/ChangeLog,v 1.102 2014/12/12 15:30:37 zlogene Exp $
+
+  12 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> akonadi-4.4.11.1-r1.ebuild:
+  amd64 stable wrt bug #517344
 
 *akonadi-4.4.11.1-r1 (13 May 2014)
 
